Fix pane overflow

--- a/src/app/styles/pane.module.css
+++ b/src/app/styles/pane.module.css
@@ -92,6 +92,7 @@
 /* Pane content styles: */
 .paneContent {
   display: flex;
+  min-width: 0px;
   backdrop-filter: blur(10px) opacity(var(--opacity));
   border-radius: 0px 10px 10px 0px;
   flex: 1 1 auto;
